# knowledge_hub

./: .env.example  .gitignore  CLAUDE.local.md.example  CLAUDE.md  main.py  pyproject.toml
.claude/: CLAUDE.local.md.template  settings.json
.claude/agents/: architecture-explorer.md  code-reviewer.md  product-manager.md  qa-tester.md  security-reviewer.md  test-writer.md
.claude/hooks/: format-python.sh  protect-files.sh
.claude/rules/: api-conventions.md  config.md  data-pipeline.md  documentation.md  error-handling.md  logging.md  models-ml.md  python-style.md  security.md  testing.md
.github/workflows/: claude-pr-review.yaml
coding-agent/plans/: 1-add-missing-claude-artifacts.md  10-run-gdrive-book-indexing.md  11-vllm-k8s-pipeline-parallel.md  12-vllm-k8s-ray-pipeline-parallel.md  13-book-embedding-on-7810-gpu.md  14-process-all-books-embed-graph-cuda.md  15-book-chapter-summarization-map-reduce.md  4-local-gpu-stack-migration.md  5-frontend-react-tailwind-shadcn.md  6-book-library-phase1.md
configs/: dev.yaml  local.yaml
docs/: app_cheatsheet.md  claude_code_productivity_guide.md  troubleshooting.md
docs/requirements/: project_requirements_v2.md
docs/templates/: spec_template.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/scripts/: start.sh  stop.sh
frontend/src/: App.tsx  index.css
k8s/: namespace.yaml  nvidia-device-plugin.yaml  vllm-configmap.yaml  vllm-head.yaml
scripts/: authenticate_gdrive_console.py  check_all.sh  download_books.py  download_model_weights.sh  process_books_full.py  seed_books.sh  start_qdrant.sh  start_vllm.sh  start_vllm_k8s.sh
src/api/: dependencies.py  routes.py  schemas.py
src/books/: models.py  (+2 more)
tests/: conftest.py
(+70 files in other folders)
